--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h1>Shopping Cart</h1>
 
 	<div class="products">
-        <div class="bg-secondary">
+        <div class="bg-secondary text-center">
             <h2>watch</h2>
             <p>Price: 1500rs</p>
             <img src="watch.png" width="200px" height="200px">
@@ -50,7 +50,7 @@
             <button class="add-to-cart" onclick="addToCart('watch', 1500)">Add to Cart</button>
         </div>
 
-        <div class="bg-warning">
+        <div class="bg-warning text-center">
             <h2>bagpack</h2>
             <p>Price: 500rs</p>
             <img src="bagpack.png" width="200px" height="200px">
@@ -62,7 +62,7 @@
                  There is two way Cortical Tail Zipper with leather pull tail, Fashionable and Novel, keeping up with the current trend.</p>
             <button class="add-to-cart" onclick="addToCart('bagpack', 500)">Add to Cart</button>
         </div>
-        <div class="bg-dark">
+        <div class="bg-info text-center">
             <h2>phone</h2>
             <p>Price:105500rs</p>
             <img src="phone.png" width="200px" height="200px">
@@ -71,7 +71,7 @@
                 Superfast 4G: Features that enhance speeds even in 4G coverage.</p>
             <button class="add-to-cart" onclick="addToCart('phone', 105500)">Add to Cart</button>
         </div>
-        <div class="bg-danger">
+        <div class="bg-danger text-center">
             <h2>kurti</h2>
             <p>Price: 700rs</p>
             <img src="kurti.png" width="200px" height="200px" >
