--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                  There is two way Cortical Tail Zipper with leather pull tail, Fashionable and Novel, keeping up with the current trend.</p>
             <button class="add-to-cart" onclick="addToCart('bagpack', 500)">Add to Cart</button>
         </div>
-        <div class="bg-info text-center">
+        <div class="bg-info text-center text-white">
             <h2>phone</h2>
             <p>Price:105500rs</p>
             <img src="phone.png" width="200px" height="200px">
